[gd_scene load_steps=6 format=3 uid="uid://bplp4rjee02x3"]

[ext_resource type="Script" path="res://scenes/playgrounds/sim_v2/sim_v2.gd" id="1_7jkc4"]
[ext_resource type="Texture2D" uid="uid://b8knvvnarxp3r" path="res://models/court/assets/tennis-court-0002.png" id="2_afv65"]
[ext_resource type="PackedScene" uid="uid://dht3opmscot26" path="res://managers/sim_section_manager/sim_section_manager.tscn" id="2_xjn47"]
[ext_resource type="PackedScene" uid="uid://cq11w2tnc8ies" path="res://ui/exit_button/exit_button.tscn" id="3_5esgi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xerh"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.12549, 0.12549, 0.12549, 0.862745)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[node name="SimV2" type="Node2D"]
script = ExtResource("1_7jkc4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_afv65")
centered = false

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 50.0
offset_top = 100.0
offset_right = 444.0
offset_bottom = 224.0
scale = Vector2(0.7, 0.7)
theme_override_styles/panel = SubResource("StyleBoxFlat_4xerh")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="SimSectionManager" parent="PanelContainer/GridContainer" instance=ExtResource("2_xjn47")]
layout_mode = 2

[node name="SimSectionManager2" parent="PanelContainer/GridContainer" instance=ExtResource("2_xjn47")]
layout_mode = 2

[node name="SimSectionManager3" parent="PanelContainer/GridContainer" instance=ExtResource("2_xjn47")]
layout_mode = 2

[node name="SimSectionManager4" parent="PanelContainer/GridContainer" instance=ExtResource("2_xjn47")]
layout_mode = 2

[node name="ExitButton" parent="." instance=ExtResource("3_5esgi")]
position = Vector2(277, 415)
